--- a/RELauncher3/Theme/ThemeItem.xaml
+++ b/RELauncher3/Theme/ThemeItem.xaml
@@ -10,7 +10,7 @@
              HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,20,0,0">
     <Grid Background="White">
         <Controls:ProgressRing Width="40" Height="40" Margin="80,105,80,0" VerticalAlignment="Top"/>
-        <Controls:Tile x:Name="ThemeTile" Margin="0,190,0,0" Height="60" Width="Auto" Content="Title" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Center"/>
+        <Controls:Tile x:Name="ThemeTile" Margin="0,190,0,0" Height="60" Width="Auto" Content="Title" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Center" Click="ThemeTile_Click"/>
         <Image x:Name="Image" Margin="0,0,0,60" Height="190"/>
     </Grid>
 </UserControl>
