主题部分完成了70% 不记得是不是修复了一些小错误

--- a/RELauncher3/Launcher/ThemePage.xaml
+++ b/RELauncher3/Launcher/ThemePage.xaml
@@ -61,7 +61,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <ScrollViewer Margin="0" Background="White">
+                    <ScrollViewer Margin="0" Background="#FFF0F0F0">
                         <WrapPanel x:Name="ThemeList" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         </WrapPanel>
                     </ScrollViewer>
