--- a/RELauncher3/Launcher/ThemePage.xaml
+++ b/RELauncher3/Launcher/ThemePage.xaml
@@ -54,6 +54,11 @@
                         Style="{StaticResource MahApps.Metro.Styles.ToggleSwitch.Win10}"
                         OffLabel="否"
                         OnLabel="是" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,115,0" Height="60" Width="120" Click="YourPictureSwitch_Click" />
+                    <Controls:ToggleSwitch x:Name="StartBoxIsBlack"
+                        Header="&quot;开始&quot;字体颜色为黑色"
+                        Style="{StaticResource MahApps.Metro.Styles.ToggleSwitch.Win10}"
+                        OffLabel="否"
+                        OnLabel="是" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,277,82.333,0" Height="60" Width="153" Click="StartBoxIsBlack_Click" />
                 </Grid>
             </TabItem>
             <TabItem Header=" 主题     ">
