--- a/RELauncher3/Launcher/Personality.xaml
+++ b/RELauncher3/Launcher/Personality.xaml
@@ -74,6 +74,10 @@
                         <WrapPanel x:Name="ThemeList" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         </WrapPanel>
                     </ScrollViewer>
+                    <Grid x:Name="LoadingGrid" Visibility="Hidden">
+                        <Controls:ProgressRing/>
+                        <TextBlock Text="请稍候" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0" FontSize="16"/>
+                    </Grid>
                 </Grid>
             </TabItem>
             <Image Height="100" Width="100"/>
