--- a/RELauncher3/Launcher/ThemePage.xaml
+++ b/RELauncher3/Launcher/ThemePage.xaml
@@ -25,6 +25,10 @@
                 <WrapPanel x:Name="ThemeList" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                 </WrapPanel>
             </ScrollViewer>
+            <Grid x:Name="LoadingGrid" Visibility="Hidden">
+                <Controls:ProgressRing/>
+                <TextBlock Text="请稍候" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0" FontSize="16"/>
+            </Grid>
         </Grid>
     </Grid>
 </Grid>
