--- a/RELauncher3/Launcher/Settings.xaml
+++ b/RELauncher3/Launcher/Settings.xaml
@@ -101,6 +101,8 @@
                     <TextBox x:Name="GameHeightText" HorizontalAlignment="Left" Height="23" Margin="177,224,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"
                              Controls:TextBoxHelper.Watermark="窗口宽度"/>
                     <TextBlock x:Name="textBlock4" HorizontalAlignment="Left" Margin="160,225,0,0" TextWrapping="Wrap" Text="×" VerticalAlignment="Top" FontSize="16" Height="26"/>
+                    <Button x:Name="ClearRE3" Content="清除缓存" HorizontalAlignment="Left" Margin="35,285,0,0" VerticalAlignment="Top" Width="75" Click="ClearRE3_Click"/>
+
                 </Grid>
             </TabItem>
             <TabItem x:Name="OthersItem" Header=" 其它" Visibility="Hidden">
